--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,8 +42,17 @@ body {
     flex-grow:1;
 }
 
+.rectangle {
+    position: absolute;
+    width: 220px;
+    height: 8px;
+    background-color: #FFE17F;
+    margin-top: 6px;
+}
+
 .button-main {
-    display: inline;
+    display: inline-block;
+    position: relative;
     width: 210px;
     height: 20px;
     font-family: 'Raleway', sans-serif;
@@ -57,10 +66,42 @@ body {
     text-decoration: none;
     cursor: pointer;
     color: #000;
+    border-style: none;
+    background: transparent;
+    margin: 0;
+    padding: 0;
+}
+
+.search-text {
+    display: inline-block;
+    width: 359px;
+    height: 40px;
+    border: 2px #000 solid;
+    box-sizing: border-box;
+    border-radius: 50px 0px 0px 50px;
+    background: transparent;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    background-image: url("/images/header/search.svg");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-position: 5px;
+    margin: 0;
+    padding: 0px 0px 0px 26px;
 }
 
 .search-button {
-    font-family: 'Rubik';
+    display: inline-block;
+    width: 160px;
+    height: 40px;
+    border: 2px #000 solid;
+    box-sizing: border-box;
+    border-radius: 0px 20px 20px 0px;
+    font-family: 'Rubik', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -68,6 +109,10 @@ body {
     text-align: center;
     cursor: pointer;
     color: #000000;
+    background: transparent;
+    margin-left: -5px;
+    border-left: none;
+    padding: 0;
 }
 
 header.page-header {
@@ -109,6 +154,7 @@ header.page-header {
   padding: 10px;
   min-width: 517px;
   min-height: 40px;
+  margin: 0;
 }
 
 .enter {
@@ -187,9 +233,12 @@ header.page-header {
 }
 
 .more {
-    display: block;
+    display: flex;
     padding: 10px;
     margin-top: 50px;
+    width: 220px;
+    height: 40px;
+    justify-content: center;
 }
 
 .details {
@@ -197,6 +246,11 @@ header.page-header {
     min-width: 307px;
     min-height: 72px;
     padding: 10px;
+}
+
+.far,
+.radius {
+    justify-content: start;
 }
 
 .description-distance,
@@ -381,12 +435,13 @@ a.description {
     background-color: #F0F0F0;
     width: 1440px;
     height: 289px;
+    margin-top: 100px;
 }
 
 .delivery-container {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-between;
     width: 1160px;
     min-height: 319px;
     margin-bottom: 72px;
@@ -394,22 +449,76 @@ a.description {
 
 .delivery-list {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-direction: column;
     margin: 0;
     padding: 0;
+    width: 287px;
+    height: 310px;
 }
 
-.delivery {
-    margin-top: 70px;
+.delivery-box {
+    margin-top:70px;
     padding: 0;
     min-width: 448px;
     min-height: 174px;
+    margin-right: 100px;
 }
 
 .delivery-head {
     padding: 0;
     margin: 0;
+}
+
+.delivery {
+    width: 280px;
+    height: 40px;
+    margin-top: 24px;
+    color: #FFE17F;
+    background-color: #000;
+    padding-top: 16px;
+    padding-left: 20px;
+}
+
+.warranty {
+    position: relative;
+    width: 152px;
+    height: 20px;
+    margin-bottom: 30px;
+    padding-left: 20px;
+    background: transparent;
+    z-index: 1;
+}
+
+.rectangle-warranty {
+    position: absolute;
+    width: 160px;
+    height: 6px;
+    background-color: #FFE17F;
+}
+
+.credit {
+    position: relative;
+    width: 152px;
+    height: 20px;
+    margin-bottom: 30px;
+    padding-left: 30px;
+    z-index: 1;
+}
+
+.rectangle-credit {
+    position: absolute;
+    width: 160px;
+    height: 6px;
+    background-color: #FFE17F;
+    margin-top: 185px;
+}
+
+.rectangle-list {
+    width: 7px;
+    height: 319px;
+    background-color: #000;
+    margin-right:150px;
 }
 
 p.description {
@@ -425,6 +534,8 @@ p.description {
     font-weight: 800;
     font-size: 18px;
     line-height: 21px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
     color: #000000;
 }
 
@@ -446,6 +557,7 @@ p.description {
     min-height: 100px;
     margin: 0 auto;
     background-color: #F0F0F0;
+    margin-top: 50px;
 }
 
 .delivery-only-image {
@@ -466,10 +578,26 @@ p.description {
     text-align: center;
 }
 
+.delivery-only-link {
+    width: 40px;
+    min-height: 40px;
+    margin-left: 40px;
+}
+
 .delivery-only-icon {
-    width: 125px;
-    min-height: 100px;
-    justify-content: flex-end;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 12px;
+    z-index: 1;
+}
+
+.circle {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    background-color: #DCDCDC;
+    border-radius: 50%;
+    margin-top: 40px;
 }
 
 .about-contacts {
@@ -477,6 +605,7 @@ p.description {
     width: 1160px;
     margin: 0 auto;
     min-height: 545px;
+    margin-bottom: 50px;
 }
 
 .comp {
@@ -502,6 +631,50 @@ span.comp {
     line-height: 20px;
 }
 
+.about-comp {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 120px;
+}
+
+.rectangle-about {
+    position: relative;
+    width: 270px;
+    height: 8px;
+    background-color: #FFE17F;
+}
+
+.about-link {
+    position: absolute;
+    width: 270px;
+    height: 40px;
+    background: transparent;
+    margin-left: 25px;
+    margin-top: -5px;
+    z-index: 1;
+    letter-spacing: 0.2em;
+}
+
+.write-link {
+    position: absolute;
+    width: 259px;
+    height: 40px;
+    background: transparent;
+    margin-left: 30px;
+    margin-top: 27px;
+    z-index: 1;
+    letter-spacing: 0.2em;
+}
+
+.rectangle-write {
+    position: relative;
+    width: 259px;
+    height: 8px;
+    background-color: #FFE17F;
+    margin-top: 50px;
+}
+
 .download {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -521,11 +694,57 @@ span.comp {
     display: flex;
 }
 
+.email-date {
+    display: inline-block;
+    width: 557px;
+    height: 57px;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    margin-left: 140px;
+}
+
+.button-email {
+    display: inline-block;
+    position: relative;
+    width: 253px;
+    height: 57px;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+    color: #000;
+    border: #C4C4C4 solid 3px;
+    background: transparent;
+    margin: 0;
+    padding: 0;
+}
+
+.rectangle-email {
+    position: absolute;
+    width: 557px;
+    height: 3px;
+    background-color: #C4C4C4;
+    margin-left: 149px;
+    margin-top: -6px;
+}
+
 .subscription {
     margin-left: 200px;
     width: 560px;
     min-height: 90px;
     margin-top: 30px;
+}
+
+.free {
+    margin-left: 150px;
 }
 
 .describe {
