--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,6 +395,8 @@ header.page-header {
     color: #000;
     justify-content: space-around;
     z-index: 1;
+    margin: 0 0 0 -110px;
+    padding: 0;
 }
 
 .menu {
